--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,104 @@
 @import "tailwindcss";
+* {
+  box-sizing: border-box;
+
+
+}
+
+body {
+  background-color: #141414;
+  font-family: sans-serif;
+  
+}
+
+/* Hide scrollbar */
+::-webkit-scrollbar {
+  display: none;
+}
+
+.skeleton {
+  position: relative;
+  overflow: hidden;
+  background-color: #2a2a2a;
+  border-radius: 0.5rem;
+}
+
+.skeleton::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -150px;
+  height: 100%;
+  width: 150px;
+  background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+  animation: shimmer 1.5s infinite;
+}
+
+@keyframes shimmer {
+  0% { left: -150px; }
+  100% { left: 100%; }
+}
+
+
+
+
+/* banner */
+.banner{
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+}
+
+.banner iframe{
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  object-fit: cover;
+  
+}
+
+
+
+/* Movies */
+.movies{
+  height: 26vh;
+  width: 20vw;
+  object-fit: cover;
+  flex-shrink: 0;
+}
+
+
+
+@media screen  and (max-width:1024px) {
+  .banner{
+    height: 85vh;
+  }
+  
+}
+
+@media screen and (max-width:768px) {
+
+  .banner{
+    height: 63vh;
+  }
+}
+
+
+
+@media screen and (max-width:640px) {
+  .banner{
+    height: 53vh;
+  }
+  
+}
+
+@media screen and (max-width:425px) {
+  .banner{
+    height: 35vh;
+  }
+  
+}
+
