--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,18 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
 * {
   box-sizing: border-box;
 
-
+}
+html{
+  font-size: 16px;
 }
 
 body {
   background-color: #141414;
-  font-family: sans-serif;
-  
+  font-family: 'Inter', 'Poppins', system-ui, sans-serif;
+  line-height: 1.2;
 }
 
 /* Hide scrollbar */
